--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SONO - Revolutionary Music Experience</title>
-    <meta name="description" content="SONO is a revolutionary music application focused on creating the best listening experience." />
+    <title>SONO - Local Music Player</title>
+    <meta name="description" content="SONO is a music player that allows you to view and play all your local music" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   </head>
   <body>
