--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>SONO - Local Music Player</title>
     <meta name="description" content="SONO is a music player that allows you to view and play all your local music" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-light.svg" media="(prefers-color-scheme: dark)" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-dark.svg" media="(prefers-color-scheme: light)" />
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
-</html> 
+</html>
