--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SONO - Local Music Player</title>
-    <meta name="description" content="SONO is a music player that allows you to view and play all your local music" />
+    <title>Sono - Local Music Player</title>
+    <meta name="description" content="A music player that allows you to view and play all your local audio files. Easy. Offline." />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link rel="icon" type="image/svg+xml" href="/favicon-light.svg" media="(prefers-color-scheme: dark)" />
     <link rel="icon" type="image/svg+xml" href="/favicon-dark.svg" media="(prefers-color-scheme: light)" />
